ftransc 5.0.7 (04 Nov 2012):
	+ Added cover art insertion support to flac files

ftransc 5.0.6 (03 Nov 2012):
	+ Fixed bug when disk number is present in the metadata which caused all
	metadata to be dropped
	+ Added support for extraction of metadata from .3gp files

ftransc 5.0.5 (28 Oct 2012):
	+ Merged the CoverTag class into MetaTag class
	+ Fixed bug when the default 'normal' preset is not in the presets file
	+ Generating fewer consumer processes when there are fewer files than CPU
	count

ftransc 5.0.4 (19 Aug 2012):
	+ added --list-formats option
	+ added --processes/-p option

ftransc 5.0.3 (23 Jul 2012):
	+ moved away from ffmpeg to avconv

ftransc 5.0.2 (15 Jul 2012):
	+ added rhythmbox plugin
	+ added CD ripping via cdparanoia

ftransc 5.0.1 (15 Jul 2012):
	+ added multithreading.

ftransc 4.3.3 (25 Mar 2012):
	+ fixed fatal KeyError when converting .aac and .mp4 files

ftransc 4.3.2 (10 Mar 2012):
	+ added album artist, disk number, and comment metadata tags to some
	formats
	+ added output folder feature to fransc GUI, ftransc_qt

ftransc 4.3.1 (20 Feb 2012):
	+ added lyrics support for mp3, m4a and wma formats

ftransc 4.3.0 (20 Feb 2012):
	+ added the -o/--outdir option
	+ fixed potential bug with --upgrade
	+ refined parsing of playlist files

ftransc 4.2.9 (13 Jan 2012):
	+ added ability to convert audio files specified in PLS playlist file and
	XSPF playlist file via the --pls option and the --xspf option, resp.

ftransc 4.2.8 (10 Jan 2012):
	+ added ability to convert audio files specified in the M3U playlist file
	via the --m3u option

ftransc 4.2.7 (06 Jan 2012):
	+ added album art support when converting FROM ogg/flac TO mp3/m4a

ftransc 4.2.6 (05 Jan 2012):
	+ code cleanup
	+ added album art support when converting from mp3 to m4a and vice versa

ftransc 4.2.5 (19 Dec 2011):
	+ code cleanup
	+ proper message when --upgrade option is used while offline

ftransc 4.2.4 (19 Dec 2011):