@@ -1,8 +1,8 @@
 MAJOR=`python --version 2> /dev/stdout | awk '{print $$2}' | cut -d+ -f1 | cut -d. -f1`
 MINOR=`python --version 2> /dev/stdout | awk '{print $$2}' | cut -d+ -f1 | cut -d. -f2`
 install:
-	install -m 755 code/ftransc /usr/local/bin
-	install -m 755 code/ftransc_qt /usr/local/bin
+	install -m 755 code/ftransc.py /usr/local/bin/ftransc
+	install -m 755 code/ftransc_qt.py /usr/local/bin/ftransc_qt
 	mkdir -p -m 755 /usr/share/doc/ftransc 2> /dev/null || :
 	install -m 644 Changelog README AUTHORS Makefile /usr/share/doc/ftransc
 	install -m 644 ftransc.1.gz /usr/share/man/man1
